wroked off as many errors as possible